--- a/professional_skills.html
+++ b/professional_skills.html
@@ -25,8 +25,10 @@
     </header>
     <!-- --------------------------------------------------------------- -->
     <article>
-        <p id="psychological_skill">心理學專業技能</p>
-            <table>
+        <p >心理學專業技能</p>
+        <br>
+        <br>
+            <table id="psychological_skill">
                 <tr>
                     <th><a href="congitive_psy.html" target="_blank">📚認知心理學</a></th>
                     <th><a href="personality_psy.html" target="_blank">📚人格心理學</a></th>
@@ -44,9 +46,13 @@
                     <th><a href="testind_psy.html" target="_blank">📚心理測驗</a></th>
                 </tr>
             </table>
+            <br>
+            <br>
         <!-- --------- -->
-        <p id="psychological_skill">程式專業技能</p>
-            <table>
+        <p>程式專業技能</p>
+        <br>
+        <br>
+            <table  id="im_skill">
                 <tr>
                     <th><a href="python_im.html" target="_blank">💻python</a></th>
                     <th><a href="java_im.html" target="_blank">💻JAVA</a></th>
