--- a/html_im.html
+++ b/html_im.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML</title>
 
     <link rel="stylesheet" href="assets/header_footer.css">
-    
+    <link rel="stylesheet" href="assets/psy_skill.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Righteous&display=swap" rel="stylesheet">
@@ -24,6 +24,19 @@
         </nav>
     </header>
     <!-- --------------------------------------------------------------- -->
+    <article>
+        <div>
+        <p class="title"> 已學習內容:</p>
+            <ul id="content">
+                <li>1. HTML5文件結構與文字排版 </li>  
+                <li>2. HTML5-表格與表單 </li>  
+                <li>3. HTML5-多媒體運用與超連結</li>  
+                <li>4. CSS-基礎語法與文字樣式 </li>  
+                <li>5. CSS-Box Model定位與排版 </li>  
+                <li>6. CSS-特效處理、色彩背景、漸層屬性 </li>  
+            </ul>
+        </div>
+    </article>
     <!-- --------------------------------------------------------------- -->
     <footer id="end">
         <address class="Contact">
