--- a/java_im.html
+++ b/java_im.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JAVA</title>
 
     <link rel="stylesheet" href="assets/header_footer.css">
-    
+    <link rel="stylesheet" href="assets/psy_skill.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Righteous&display=swap" rel="stylesheet">
@@ -24,6 +24,19 @@
         </nav>
     </header>
     <!-- --------------------------------------------------------------- -->
+    <article>
+        <div>
+        <p class="title"> 已學習內容:</p>
+            <ul id="content">
+                <li>1. 基礎語法 </li>  
+                <li>2. 認識物件 </li>  
+                <li>3. 物件封裝 </li>  
+                <li>4. 繼承與多型 </li>  
+                <li>5. 介面與多型 </li>  
+                <li>6. 例外處理 </li>  
+            </ul>
+        </div>
+    </article>
     <!-- --------------------------------------------------------------- -->
     <footer id="end">
         <address class="Contact">
