--- a/js_im.html
+++ b/js_im.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Javascript</title>
 
     <link rel="stylesheet" href="assets/header_footer.css">
-    
+    <link rel="stylesheet" href="assets/psy_skill.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Righteous&display=swap" rel="stylesheet">
@@ -24,6 +24,19 @@
         </nav>
     </header>
     <!-- --------------------------------------------------------------- -->
+    <article>
+        <div>
+        <p class="title"> 已學習內容:</p>
+            <ul id="content">
+                <li>1. JavaScript-基礎語法:變數與運算子、流程控制 </li>  
+                <li>2. JavaScript-函數與物件</li>  
+                <li>3. JavaScript-DOM物件模型 </li>  
+                <li>4. jQuery-基礎語法與選擇器/li>  
+                <li>5. jQuery-事件處理</li>  
+                <li>6. jQuery-選單、巡覽與標籤頁 </li>  
+            </ul>
+        </div>
+    </article>
     <!-- --------------------------------------------------------------- -->
     <footer id="end">
         <address class="Contact">
