--- a/python_im.html
+++ b/python_im.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>python</title>
 
     <link rel="stylesheet" href="assets/header_footer.css">
-    
+    <link rel="stylesheet" href="assets/psy_skill.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Righteous&display=swap" rel="stylesheet">
@@ -24,7 +24,19 @@
         </nav>
     </header>
     <!-- --------------------------------------------------------------- -->
-    
+    <article>
+        <div>
+        <p class="title"> 已學習內容:</p>
+            <ul id="content">
+                <li>1. NumPy 進行資料運算 </li>  
+                <li>2. 使用 matplotlib 繪製圖表 </li>  
+                <li>3. 使用 pandas 進行資料分析 </li>  
+                <li>4. 網路爬蟲 </li>  
+                <li>5. Django框架使用 </li>  
+                <li>6. scrapy框架使用 </li>  
+            </ul>
+        </div>
+    </article>
     <!-- --------------------------------------------------------------- -->
     <footer id="end">
         <address class="Contact">
